# doc-rag

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.ci  Dockerfile.rust  Dockerfile.simple  Dockerfile.test  FACT_TEST_SUITE_COMPLETED.md  INTEGRATION_TEST_REPORT.md  PERFORMANCE_VALIDATION_REPORT.md  PHASE2_VALIDATION_REPORT.md  README-Testing.md  README.md  TDD_REPORT.md  TEST_RESULTS.md  TEST_RESULTS_REPORT.md  build_errors.txt  docker-compose-neo4j.yml  docker-compose-production.yml  docker-compose.ci.yml  docker-compose.minimal.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  mark-directory.sh  neo4j_validation_results.json  neural_performance_test.rs  nvm  research-findings-phase2.md  standalone_test.rs  test_fact  test_fact_integration.rs  test_results.txt  test_results_summary.md  validate_neo4j.py
src/api/: Cargo.toml  integration_module_summary.md
src/api/.claude-flow/metrics/: performance.json  task-metrics.json
src/api/src/: Dockerfile  clients.rs  config.rs  enhanced_handlers.rs  errors.rs  integration.rs  integration_test.rs  lib.rs  main.rs  metrics.rs  models.rs  pipeline.rs  routes.rs  security.rs  server.rs  simple_server.rs  sparc_pipeline.rs  tracing.rs  validation.rs
src/api/src/handlers/: admin.rs  auth.rs  documents.rs  files.rs  health.rs  metrics.rs  mod.rs  queries.rs
src/api/src/middleware/: auth.rs  error_handling.rs  metrics.rs  mod.rs  rate_limiting.rs  request_logging.rs
src/api/src/models/: api.rs  domain.rs  mod.rs  storage.rs
src/chunker/: .dockerignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  NEURAL_IMPLEMENTATION.md  README.md
src/chunker/.claude-flow/metrics/: performance.json  task-metrics.json
src/chunker/benches/: advanced_chunking_benchmarks.rs  chunking_benchmarks.rs
src/chunker/examples/: neural_boundary_demo.rs  performance_demo.rs
src/chunker/src/: boundary.rs  boundary_simple.rs  chunk.rs  integration_demo.rs  lib.rs  lib_original.rs  metadata.rs  minimal_lib.rs  neural_chunker.rs  neural_chunker_simple.rs  neural_chunker_working.rs  neural_trainer.rs  neural_trainer_stub.rs  references.rs  references_simple.rs  simple_lib.rs
src/embedder/: Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
src/embedder/.claude-flow/metrics/: performance.json  task-metrics.json
src/embedder/benches/: embedding_benchmarks.rs  similarity_benchmarks.rs
src/embedder/examples/: basic_usage.rs  batch_processing.rs  model_comparison.rs
src/embedder/src/: batch.rs  cache.rs  config.rs  error.rs  lib.rs  models.rs  similarity.rs
src/embedder/tests/: integration_tests.rs  unit_tests.rs
src/fact/: Cargo.toml
src/fact/src/: lib.rs
src/graph/: Cargo.toml
src/graph/src/: lib.rs  models.rs
src/graph/src/neo4j/: client.rs  client.rs.bak  mod.rs  schema.rs  tests.rs
src/integration/: Cargo.toml  Dockerfile
src/integration/.claude-flow/metrics/: performance.json  task-metrics.json
src/integration/src/: byzantine_consensus.rs  circuit_breaker.rs  config.rs  coordinator.rs  daa_orchestrator.rs  error.rs  gateway.rs  health.rs  lib.rs  main.rs  message_bus.rs  metrics.rs  mrap.rs  pipeline.rs  service_discovery.rs  temp_types.rs  tracing.rs
src/integration/tests/: daa_integration_tests.rs  e2e_tests.rs
src/mcp-adapter/: .dockerignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
src/mcp-adapter/.claude-flow/metrics/: performance.json  task-metrics.json
src/mcp-adapter/benches/: auth_performance.rs  concurrent_messages.rs  mcp_benchmarks.rs  message_latency.rs  queue_throughput.rs
src/mcp-adapter/examples/: auth_demo.rs
src/mcp-adapter/src/: auth.rs  client.rs  connection.rs  error.rs  lib.rs  message.rs  queue.rs
src/mcp-adapter/src/tests/: mod.rs  unit.rs
src/mcp-adapter/tests/: integration.rs  integration_auth_flow.rs  integration_auth_flow_disabled.rs  integration_tests.rs
src/query-processor/: Cargo.toml
src/query-processor/examples/: neural_demo.rs
src/query-processor/src/: analyzer.rs  cache.rs  classifier.rs  config.rs  consensus.rs  enhanced_classifier.rs  entities.rs  error.rs  extractor.rs  fact_client.rs  lib.rs  mcp_tools.rs  metrics.rs  performance_optimizer.rs  query.rs  strategy.rs  symbolic_router.rs  types.rs  validation.rs
src/query-processor/tests/: integration_tests.rs
src/response-generator/: Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
src/response-generator/benches/: response_generation.rs
src/response-generator/config/: default.toml
src/response-generator/examples/: advanced_features.rs  basic_usage.rs  streaming_demo.rs
src/response-generator/src/: builder.rs  cache.rs  citation.rs  citation.rs.bak  config.rs  enhanced_citation_formatter.rs  error.rs  fact_accelerated.rs  fact_cache_impl.rs  fact_cache_optimized.rs  formatter.rs  lib.rs  main.rs  mongodb_integration.rs  pipeline.rs  proof_chain_integration.rs  query_preprocessing.rs  template_engine.rs  template_integration.rs  template_structures.rs  validator.rs
src/response-generator/tests/: citation_basic_tests.rs  citation_system_tests.rs  fact_integration_tests.rs  integration_tests.rs
src/storage/: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  init-mongodb.js  storage.toml
src/storage/benches/: storage_benchmarks.rs  vector_search_benchmarks.rs
src/storage/examples/: basic_usage.rs  vector_search_demo.rs
src/storage/scripts/: setup-replica.sh
src/storage/src/: config.rs  error.rs  lib.rs  metrics.rs  mongodb_optimizer.rs  operations.rs  schema.rs  search.rs
src/storage/tests/: integration.rs  mod.rs  unit.rs
src/symbolic/: Cargo.toml  README.md
src/symbolic/examples/: complete_pipeline.rs
src/symbolic/src/: error.rs  inference.rs  lib.rs  logic_parser.rs  proof_chains.rs  rule_parser.rs  stdlib.pl  tests.rs  types.rs
src/tests/: Cargo.toml  README.md  fact_performance_tests.rs  mod.rs
src/tests/benches/: fact_benchmarks.rs
src/tests/mocks/: mock_fact_client.rs  mod.rs
tdd-storage-client/: Cargo.toml  tdd_demonstration.rs
(+409 files in other folders)
