[workspace]
members = [
    "src/chunker"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Doc-RAG Team <team@doc-rag.io>"]
license = "MIT"
repository = "https://github.com/doc-rag/doc-rag"
homepage = "https://doc-rag.io"
description = "High-performance document retrieval and augmented generation system"
keywords = ["rag", "retrieval", "nlp", "embeddings", "search"]
categories = ["text-processing", "web-programming", "science"]
rust-version = "1.75.0"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# HTTP and API
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }
minio = "0.1"

# Vector operations and ML
candle-core = { version = "0.4", features = ["cuda", "accelerate"] }
candle-nn = "0.4"
candle-transformers = "0.4"
hf-hub = "0.3"
tokenizers = "0.15"
ort = { version = "2.0", features = ["cuda", "tensorrt"] }

# Vector databases
qdrant-client = "1.7"
pinecone-sdk = "0.6"
weaviate-client = "0.3"

# Text processing
tiktoken-rs = "0.5"
regex = "1.10"
unicode-segmentation = "1.10"
html2text = "0.8"
scraper = "0.18"
pdf-extract = "0.6"
docx-rs = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
mime = "0.3"
bytes = "1.5"
dashmap = "5.5"
arc-swap = "1.6"
once_cell = "1.19"
parking_lot = "0.12"

# Monitoring and metrics
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
ring = "0.17"

# Development and testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true