[package]
name = "storage-client-tdd"
version = "0.1.0" 
edition = "2021"

[workspace]

[[bin]]
name = "tdd_demonstration"
path = "tdd_demonstration.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"