[package]
name = "chunker"
version = "0.1.0"
edition = "2021"
authors = ["RAG System Team"]
description = "Intelligent document chunker with semantic boundary detection"
license = "MIT"

[dependencies]
ruv-fann = "0.1.6"
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full", "tracing"] }
async-trait = "0.1"
regex = "1.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
unicode-segmentation = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
fastrand = "2.0"
num-traits = "0.2"
dashmap = "5.5"
parking_lot = "0.12"
smallvec = "1.13"
hashbrown = { version = "0.14", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "chunking_benchmarks"
harness = false

[[bench]]
name = "advanced_chunking_benchmarks"
harness = false

[[example]]
name = "performance_demo"

[[example]]
name = "neural_boundary_demo"

[lib]
name = "chunker"
path = "src/lib.rs"