[package]
name = "embedder"
version = "0.1.0"
edition = "2021"
authors = ["RAG System Team <team@ragsystem.com>"]
description = "High-performance embedding generator for RAG system"
license = "MIT"

[dependencies]
# Core ML libraries
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt"], optional = true }
ndarray = "0.15"

# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
dashmap = "5.5"
once_cell = "1.19"

# HTTP client for model downloads
reqwest = { version = "0.11", features = ["json", "stream"] }

# File operations
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
safetensors = "0.4"

# Path utilities
path-slash = "0.2"

# Math utilities
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
pretty_assertions = "1.4"
proptest = "1.4"
approx = "0.5.1"

[[bench]]
name = "embedding_benchmarks"
harness = false

[[bench]]
name = "similarity_benchmarks"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"

[[example]]
name = "model_comparison"
path = "examples/model_comparison.rs"

[features]
default = ["validation"]
validation = []
onnx = ["ort"]
