[package]
name = "fact"
version = "0.1.0"
edition = "2021"
description = "FACT - Fast Accurate Caching Technology for <50ms responses"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
