[package]
name = "mcp-adapter"
version = "0.1.0"
edition = "2021"

# Make this a standalone package (not part of workspace)
[workspace]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = { version = "0.3", features = ["executor"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
parking_lot = "0.12"

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "mcp_benchmarks"
harness = false

[lib]
name = "mcp_adapter"
path = "src/lib.rs"