[package]
name = "query-processor"
version = "0.1.0"
edition = "2021"
description = "High-accuracy query processing component for RAG system with semantic analysis and Byzantine consensus"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for external services
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
config = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regular expressions for entity extraction
regex = "1.10"
crepe = { workspace = true }  # Datalog engine integration
# scryer-prolog = { workspace = true }  # Prolog engine integration (commented until available)

# Natural language processing
whatlang = "0.16"

# Vector operations
ndarray = "0.15"

# Hash maps with better performance
ahash = "0.8"
indexmap = { version = "2.1", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Metrics and observability
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration validation
validator = { version = "0.16", features = ["derive"] }

# Text processing
unicode-segmentation = "1.10"
unicode-normalization = "0.1"

# Fuzzy string matching for entity extraction
fuzzy-matcher = "0.3"

# Machine learning features
linfa = "0.7"
smartcore = "0.3"

# Connection pooling for FACT client
bb8 = "0.8"

# Cryptographic hashing for cache keys
blake3 = "1.5"

# Fast random number generation
fastrand = "2.0"

# Neural network integration (ruv-FANN) - Ready to enable when library is available
ruv-fann = { version = "0.1.6", optional = true }

# DAA integration for consensus - Enabled for decentralized autonomous agents
daa = { version = "0.5.0", optional = true }

# FACT integration for citation tracking - REQUIRED per Phase 2 requirements  
fact = { workspace = true } # Mandatory <50ms cache integration per Phase 2

# Local embedder crate
embedder = { path = "../embedder" }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"
wiremock = "0.5"

[features]
default = ["neural", "consensus"]
# DAA feature enabled for distributed consensus:
neural = ["ruv-fann"]  # Neural network features
consensus = ["daa"]
# FACT is now mandatory, not optional
benchmarks = []

# Benchmarks disabled - not implemented yet
# [[bench]]
# name = "query_analysis"
# harness = false
# required-features = ["benchmarks"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"